src/main/java/L24/L24.java
/* Generated By:JavaCC: Do not edit this line. L24.java */
import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.io.InputStream;
import java.util.ArrayList;

public class L24 implements L24Constants {

    public static void main(String args[]) throws ParseException {
            try {
                InputStream inputstream = new FileInputStream("src/main/resources/ValueJug.l24");
                L24 parser = new L24(inputstream);
                parser.Program();
            }catch (Exception e){
                System.err.println(e);
            }
        }
    /**全局字母表*/
    public static ArrayList<Symbol> list = new ArrayList();
    /**中间代码表*/
    public static ArrayList<MiddleCode> midCodeList = new ArrayList();
    /**
      * @Description: 添加符号表
      * @author LuoTianYi
      *
    **/
    public static void addSymbol(Token t){
        Symbol s = new Symbol(SymbolType.intSym);
        s.setName(t.image);//Token的实际文本
        for(int i = 0; i < list.size(); i++){
            if (list.get(i).getName().equals(s.getName())) {
                ErrorExecute.showErrMsg(1,"\u53d8\u91cf\u91cd\u590d\u58f0\u660e");
            }
        }
        list.add(s);
    }
    /**
      * @Description: 输出中间代码内容
      * @author LuoTianYi
      *
    **/
    public static void outPutMiddleCodeList(){
        for(int i = 0; i < midCodeList.size(); i++) {
            MiddleCode m = midCodeList.get(i);
            System.out.println(m.toString());
        }
    }
    /**
      * @Description: 请求数据空间
      * @author LuoTianYi
      *
    **/
    public static void askForSpace(){
        if(list.size()>100){
            ErrorExecute.showErrMsg(6,"\u7b26\u53f7\u8868\u6ea2\u51fa");
            //超过字母表最大容量
        }
        MiddleCode code = new MiddleCode(MiddleCode.CodeType.INT,0,list.size());
        midCodeList.add(code);
    }
    /**
      * @Description 输出中间代码到指定文件
      * @return
      * @author LuoTianYi
      *
    **/
    public static void outPutGoalCode(){
        FileOutputStream out;
        try{
            out = new FileOutputStream("src/main/resources/output.txt");
            for(int i = 0; i < midCodeList.size(); i++) {
              MiddleCode code = midCodeList.get(i);
              out.write(code.toString().getBytes("GBK"));
              out.write("\r\n".getBytes("GBK"));
            }
            out.close();
        }catch (Exception e){
            ErrorExecute.showErrMsg(7,"\u6587\u4ef6\u8f93\u51fa\u9519\u8bef");
        }
    }
    /**
      * @Description 给符号表变量赋值或取变量值
      * @param 取0:LOD 取1:STO
      * @return
      * @author LuoTianYi
      *
    **/
    public static void getVariableById(Token t, int type){
        String id = t.image;
        boolean isFind = false;
        int relative = -1;
        for(int i = 0; i < list.size(); i++) {
          if(list.get(i).getType()==SymbolType.intSym){
                relative++;
                if(list.get(i).getName().equals(id)){
                    isFind = true;
                    if(list.get(i).getValue()>Integer.MAX_VALUE||list.get(i).getValue()<Integer.MIN_VALUE){
                        ErrorExecute.showErrMsg(5,"\u53d8\u91cf\u6ea2\u51fa");
                        //变量溢出
                    }
                    if(type==0){
                        MiddleCode code = new MiddleCode(MiddleCode.CodeType.LOD,0,relative);
                        midCodeList.add(code);
                    }
                    else{
                        MiddleCode code = new MiddleCode(MiddleCode.CodeType.STO,0,relative);
                        midCodeList.add(code);
                    }
                }
          }
        }
        if(!isFind){
            ErrorExecute.showErrMsg(0,"\u53d8\u91cf\u672a\u58f0\u660e");
            //变量未声明
        }
    }

  final public void Program() throws ParseException {
    if (jj_2_1(2)) {
      Definition();
    } else {
      ;
    }
    MainFunction();
    jj_consume_token(0);

  }

  final public void Definition() throws ParseException {
    Token s;
    jj_consume_token(VAR);
    s = jj_consume_token(IDENT);
              addSymbol(s);
    label_1:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(COMMA);
      s = jj_consume_token(IDENT);
              addSymbol(s);
    }
    jj_consume_token(SEMICOLON);
                askForSpace();
  }

  final public void MainFunction() throws ParseException {
    jj_consume_token(MAIN);
    jj_consume_token(LCURLY);
    Statement_list();
    jj_consume_token(RCURLY);
  }

  final public void Statement_list() throws ParseException {
    label_2:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_2;
      }
      Statement();
      jj_consume_token(SEMICOLON);
    }
  }

  final public void Statement() throws ParseException {
    if (jj_2_4(2)) {
      AssignmentStatement();
    } else if (jj_2_5(2)) {
      IfStatement();
    } else if (jj_2_6(2)) {
      WhileStatement();
    } else if (jj_2_7(2)) {
      ScanStatement();
    } else if (jj_2_8(2)) {
      PrintStatement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void AssignmentStatement() throws ParseException {
    Token s;
    //<ident> "=" <expr>
        s = jj_consume_token(IDENT);
    jj_consume_token(ASSIGN);
    Expression();
        getVariableById(s,1);
  }

  final public void IfStatement() throws ParseException {
    int jpcAddress;
    int jmpAddress;
    jj_consume_token(IF);
    jj_consume_token(LPA);
    BoolExpression();
        MiddleCode code = new MiddleCode(MiddleCode.CodeType.JPC,0,0);
        midCodeList.add(code);
        jpcAddress = midCodeList.size()-1;
    jj_consume_token(RPA);
    jj_consume_token(THEN);
    jj_consume_token(LCURLY);
    Statement_list();
        MiddleCode code2 = new MiddleCode(MiddleCode.CodeType.JMP,0,midCodeList.size()+1);
        midCodeList.add(code2);
        midCodeList.get(jpcAddress).a = midCodeList.size();
        jmpAddress = midCodeList.size()-1;
    jj_consume_token(RCURLY);
    if (jj_2_9(2)) {
      jj_consume_token(ELSE);
      jj_consume_token(LCURLY);
      Statement_list();
        midCodeList.get(jmpAddress).a = midCodeList.size();
      jj_consume_token(RCURLY);
    } else {
      ;
    }
    jj_consume_token(END);
  }

  final public void WhileStatement() throws ParseException {
    int beginAddress;
    int jpcAddress;
    int endAddress;
    jj_consume_token(WHILE);
            beginAddress = midCodeList.size();
    jj_consume_token(LPA);
    BoolExpression();
        MiddleCode code = new MiddleCode(MiddleCode.CodeType.JPC,0,0);
        midCodeList.add(code);
        jpcAddress = midCodeList.size()-1;
    jj_consume_token(RPA);
    jj_consume_token(LCURLY);
    Statement_list();
        MiddleCode code2 = new MiddleCode(MiddleCode.CodeType.JMP,0,beginAddress);
        midCodeList.add(code2);
        midCodeList.get(jpcAddress).a = midCodeList.size();
    jj_consume_token(RCURLY);
  }

  final public void ScanStatement() throws ParseException {
        Token t;
    jj_consume_token(SCAN);
    jj_consume_token(LPA);
    t = jj_consume_token(IDENT);
            MiddleCode code = new MiddleCode(MiddleCode.CodeType.OPR,0,16);
            midCodeList.add(code);
            getVariableById(t,1);
    label_3:
    while (true) {
      if (jj_2_10(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(COMMA);
      t = jj_consume_token(IDENT);
            MiddleCode code1 = new MiddleCode(MiddleCode.CodeType.OPR,0,16);
            midCodeList.add(code1);
            getVariableById(t,1);
    }
    jj_consume_token(RPA);
  }

  final public void PrintStatement() throws ParseException {
        Token t;
    jj_consume_token(PRINT);
    jj_consume_token(LPA);
    Expression();
            MiddleCode code = new MiddleCode(MiddleCode.CodeType.OPR,0,14);
            midCodeList.add(code);
    label_4:
    while (true) {
      if (jj_2_11(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(COMMA);
      Expression();
            MiddleCode code1 = new MiddleCode(MiddleCode.CodeType.OPR,0,14);
            midCodeList.add(code1);
    }
    jj_consume_token(RPA);
  }

  final public void BoolExpression() throws ParseException {
    Token t;
    Expression();
    if (jj_2_12(2)) {
      t = jj_consume_token(EQL);
    } else if (jj_2_13(2)) {
      t = jj_consume_token(NEQ);
    } else if (jj_2_14(2)) {
      t = jj_consume_token(LSS);
    } else if (jj_2_15(2)) {
      t = jj_consume_token(LEQ);
    } else if (jj_2_16(2)) {
      t = jj_consume_token(GTR);
    } else if (jj_2_17(2)) {
      t = jj_consume_token(GEQ);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expression();
        MiddleCode code;
        switch (t.image){
            case "==":
                code = new MiddleCode(MiddleCode.CodeType.OPR,0,8);
                midCodeList.add(code);
                break;
            case "!=":
                code = new MiddleCode(MiddleCode.CodeType.OPR,0,9);
                midCodeList.add(code);
                break;
            case "<":
                code = new MiddleCode(MiddleCode.CodeType.OPR,0,10);
                midCodeList.add(code);
                break;
            case "<=":
                code = new MiddleCode(MiddleCode.CodeType.OPR,0,11);
                midCodeList.add(code);
                break;
            case ">":
                code = new MiddleCode(MiddleCode.CodeType.OPR,0,12);
                midCodeList.add(code);
                break;
            case ">=":
                code = new MiddleCode(MiddleCode.CodeType.OPR,0,13);
                midCodeList.add(code);
                break;
            default:
                break;
    }
  }

  final public void Expression() throws ParseException {
    Token t;
    if (jj_2_20(2)) {
      if (jj_2_18(2)) {
        jj_consume_token(PLUS);
      } else if (jj_2_19(2)) {
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    Term();
    label_5:
    while (true) {
      if (jj_2_21(2)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_22(2)) {
        t = jj_consume_token(PLUS);
      } else if (jj_2_23(2)) {
        t = jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      Term();
        if(t.image.equals("+")){
            MiddleCode code = new MiddleCode(MiddleCode.CodeType.OPR,0,2);
            midCodeList.add(code);
        }
        else{
            MiddleCode code = new MiddleCode(MiddleCode.CodeType.OPR,0,3);
            midCodeList.add(code);
        }
    }
  }

  final public void Term() throws ParseException {
    Token t;
    Factor();
    label_6:
    while (true) {
      if (jj_2_24(2)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_25(2)) {
        t = jj_consume_token(MUL);
      } else if (jj_2_26(2)) {
        t = jj_consume_token(DIV);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      Factor();
        if(t.image.equals("*")){
            MiddleCode code = new MiddleCode(MiddleCode.CodeType.OPR,0,4);
            midCodeList.add(code);
        }
        else{
            MiddleCode code1 = new MiddleCode(MiddleCode.CodeType.OPR,0,5);
            midCodeList.add(code1);
        }
    }
  }

  final public void Factor() throws ParseException {
    Token s;
    if (jj_2_27(2)) {
      s = jj_consume_token(IDENT);
            getVariableById(s,0);
    } else if (jj_2_28(2)) {
      s = jj_consume_token(NUMBER);
            if(Integer.parseInt(s.image)>Integer.MAX_VALUE||Integer.parseInt(s.image)<-Integer.MIN_VALUE){
                ErrorExecute.showErrMsg(5,"\u53d8\u91cf\u6ea2\u51fa");
                //超出最大值
            }
            MiddleCode code = new MiddleCode(MiddleCode.CodeType.LIT,0,Integer.parseInt(s.image));
            midCodeList.add(code);
    } else if (jj_2_29(2)) {
      jj_consume_token(LPA);
      Expression();
      jj_consume_token(RPA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_3_25() {
    if (jj_scan_token(MUL)) return true;
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_scan_token(GEQ)) return true;
    return false;
  }

  private boolean jj_3_23() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  private boolean jj_3R_11() {
    if (jj_scan_token(WHILE)) return true;
    if (jj_scan_token(LPA)) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_scan_token(GTR)) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  private boolean jj_3_20() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) return true;
    }
    return false;
  }

  private boolean jj_3_22() {
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_20()) jj_scanpos = xsp;
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_scan_token(LEQ)) return true;
    return false;
  }

  private boolean jj_3_9() {
    if (jj_scan_token(ELSE)) return true;
    if (jj_scan_token(LCURLY)) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_scan_token(LSS)) return true;
    return false;
  }

  private boolean jj_3_13() {
    if (jj_scan_token(NEQ)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(LPA)) return true;
    return false;
  }

  private boolean jj_3_12() {
    if (jj_scan_token(EQL)) return true;
    return false;
  }

  private boolean jj_3R_9() {
    if (jj_scan_token(IDENT)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  private boolean jj_3_8() {
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3_29() {
    if (jj_scan_token(LPA)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_28() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3_27() {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_scan_token(PRINT)) return true;
    if (jj_scan_token(LPA)) return true;
    return false;
  }
